database strings added to the project

--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -1,14 +1,34 @@
 {
+  "AccountsDatabaseSettings": {
+    "CollectionName": "Users",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "SzakdolgozatDb"
+  },
+  "TasksDatabaseSettings": {
+    "CollectionName": "Tasks",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "SzakdolgozatDb"
+  },
+  "SubTasksDatabaseSettings": {
+    "CollectionName": "SubTasks",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "SzakdolgozatDb"
+  },
+  "ProjectsDatabaseSettings": {
+    "CollectionName": "Projects",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "SzakdolgozatDb"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebApplication1-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
+    }
+  },
   "IdentityServer": {
     "Clients": {
       "WebApplication1": {
@@ -16,5 +36,5 @@
       }
     }
   },
-"AllowedHosts": "*"
+  "AllowedHosts": "*"
 }
