--- a/WebApplication1/ClientApp/angular.json
+++ b/WebApplication1/ClientApp/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "WebApplication1": {
+    "Szakdolgozat": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -50,18 +50,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "WebApplication1:build"
+            "browserTarget": "Szakdolgozat:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "WebApplication1:build:production"
+              "browserTarget": "Szakdolgozat:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "WebApplication1:build"
+            "browserTarget": "Szakdolgozat:build"
           }
         },
         "test": {
@@ -111,7 +111,7 @@
         }
       }
     },
-    "WebApplication1-e2e": {
+    "Szakdolgozat-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -119,7 +119,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "WebApplication1:serve"
+            "devServerTarget": "Szakdolgozat:serve"
           }
         },
         "lint": {
@@ -132,5 +132,5 @@
       }
     }
   },
-  "defaultProject": "WebApplication1"
+  "defaultProject": "Szakdolgozat"
 }
