--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -20,7 +20,7 @@
     "DatabaseName": "SzakdolgozatDb"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebApplication1-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Szakdolgozat-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -31,7 +31,7 @@
   },
   "IdentityServer": {
     "Clients": {
-      "WebApplication1": {
+      "Szakdolgozat": {
         "Profile": "IdentityServerSPA"
       }
     }
