--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -1,22 +1,22 @@
 {
   "AccountsDatabaseSettings": {
     "CollectionName": "Users",
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb+srv://root:toor@szaldolgozatdb.mwqno.mongodb.net/",
     "DatabaseName": "SzakdolgozatDb"
   },
   "TasksDatabaseSettings": {
     "CollectionName": "Tasks",
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb+srv://root:toor@szaldolgozatdb.mwqno.mongodb.net/",
     "DatabaseName": "SzakdolgozatDb"
   },
   "SubTasksDatabaseSettings": {
     "CollectionName": "SubTasks",
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb+srv://root:toor@szaldolgozatdb.mwqno.mongodb.net/",
     "DatabaseName": "SzakdolgozatDb"
   },
   "ProjectsDatabaseSettings": {
     "CollectionName": "Projects",
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb+srv://root:toor@szaldolgozatdb.mwqno.mongodb.net/",
     "DatabaseName": "SzakdolgozatDb"
   },
   "ConnectionStrings": {
