comments added, controller not ready to accept a new comment

--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -1,22 +1,27 @@
 {
   "AccountsDatabaseSettings": {
     "CollectionName": "Users",
-    "ConnectionString": "mongodb+srv://root:toor@szaldolgozatdb.mwqno.mongodb.net/",
+    "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "SzakdolgozatDb"
   },
   "TasksDatabaseSettings": {
     "CollectionName": "Tasks",
-    "ConnectionString": "mongodb+srv://root:toor@szaldolgozatdb.mwqno.mongodb.net/",
+    "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "SzakdolgozatDb"
   },
   "SubTasksDatabaseSettings": {
     "CollectionName": "SubTasks",
-    "ConnectionString": "mongodb+srv://root:toor@szaldolgozatdb.mwqno.mongodb.net/",
+    "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "SzakdolgozatDb"
   },
   "ProjectsDatabaseSettings": {
     "CollectionName": "Projects",
-    "ConnectionString": "mongodb+srv://root:toor@szaldolgozatdb.mwqno.mongodb.net/",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "SzakdolgozatDb"
+  },
+  "CommentsDatabaseSettings": {
+    "CollectionName": "Comments",
+    "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "SzakdolgozatDb"
   },
   "ConnectionStrings": {
